--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^4.2.6",
     "core-js": "^3.8.3",
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.3.0",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
