--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^4.2.6",
     "core-js": "^3.8.3",
     "qrcode.vue": "^3.6.0",
+    "uuid": "^11.1.0",
     "vue": "^3.3.0",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
