--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^4.2.6",
     "core-js": "^3.8.3",
+    "lodash-es": "^4.17.21",
     "qrcode.vue": "^3.6.0",
     "uuid": "^11.1.0",
     "vue": "^3.3.0",
@@ -17,6 +18,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
