--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx",
-    "src/**/*.d.ts"
+    "tests/**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
