--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
+    "axios": "^1.9.0",
     "core-js": "^3.8.3",
+    "flush-promises": "^1.0.2",
     "lodash-es": "^4.17.21",
     "qrcode.vue": "^3.6.0",
     "uuid": "^11.1.0",
