--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "core-js": "^3.8.3",
     "flush-promises": "^1.0.2",
+    "lego-components": "^0.1.7",
     "lodash-es": "^4.17.21",
     "qrcode.vue": "^3.6.0",
     "rgb-hex": "^4.1.0",
