--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ant-design-vue": "^4.2.6",
     "axios": "^1.9.0",
     "core-js": "^3.8.3",
+    "cropperjs": "^2.0.0",
     "flush-promises": "^1.0.2",
     "lego-components": "^0.1.7",
     "lodash-es": "^4.17.21",
