--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "uuid": "^11.1.0",
     "vue": "^3.3.0",
     "vue-router": "^4.0.13",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
