--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.27.2",
     "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.12",
+    "@types/vuedraggable": "^2.23.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
