--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "cropperjs": "^2.0.0",
     "flush-promises": "^1.0.2",
+    "hotkeys-js": "^3.13.14",
     "lego-components": "^0.1.7",
     "lodash-es": "^4.17.21",
     "qrcode.vue": "^3.6.0",
