--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cropperjs": "^2.0.0",
     "flush-promises": "^1.0.2",
     "hotkeys-js": "^3.13.14",
+    "json-server": "^1.0.0-beta.3",
     "lego-components": "^0.1.7",
     "lodash-es": "^4.17.21",
     "qrcode.vue": "^3.6.0",
