--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "poster-craft",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:watch": "vue-cli-service test:unit --watch",
     "lint": "vue-cli-service lint",
-    "mock": "nodemon ./mockServer.mjs"
+    "mock": "nodemon ./fake-server/mockServer.js"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
@@ -18,7 +19,7 @@
     "cropperjs": "^2.0.0",
     "flush-promises": "^1.0.2",
     "hotkeys-js": "^3.13.14",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "lego-components": "^0.1.7",
     "lodash-es": "^4.17.21",
     "qrcode.vue": "^3.6.0",
