--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flush-promises": "^1.0.2",
     "hotkeys-js": "^3.13.14",
     "json-server": "^0.17.4",
+    "jsonwebtoken": "^9.0.2",
     "lego-components": "^0.1.7",
     "lodash-es": "^4.17.21",
     "qrcode.vue": "^3.6.0",
