--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "axios": "^1.9.0",
     "core-js": "^3.8.3",
     "cropperjs": "^2.0.0",
+    "file-saver": "^2.0.5",
     "flush-promises": "^1.0.2",
     "hotkeys-js": "^3.13.14",
+    "html2canvas": "^1.4.1",
     "json-server": "^0.17.4",
     "jsonwebtoken": "^9.0.2",
     "lego-components": "^0.1.7",
     "lodash-es": "^4.17.21",
     "path-to-regexp": "^8.2.0",
+    "qrcode": "^1.5.4",
     "qrcode.vue": "^3.6.0",
     "rgb-hex": "^4.1.0",
     "uuid": "^11.1.0",
@@ -35,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.12",
     "@types/vuedraggable": "^2.23.2",
