--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "mock": "nodemon ./fake-server/mockServer.js"
   },
   "dependencies": {
+    "@ant-design-vue/use": "^0.0.1-alpha.10",
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.9.0",
+    "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
-    "cropperjs": "^2.0.0",
+    "cropperjs": "^1.6.2",
     "file-saver": "^2.0.5",
     "flush-promises": "^1.0.2",
     "hotkeys-js": "^3.13.14",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
+    "@types/clipboard": "^2.0.1",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.12",
