新增文件上传功能，使用multer处理文件上传，创建上传目录并提供静态服务；优化登录逻辑，支持验证码过期时仍可登录；更新PreviewForm组件为setup语法。

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "vue": "^3.3.0",
     "vue-router": "^4.0.13",
     "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "multer": "^1.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
