--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "lego-components": "^0.1.7",
     "lodash-es": "^4.17.21",
+    "multer": "^1.4.4",
     "path-to-regexp": "^8.2.0",
     "qrcode": "^1.5.4",
     "qrcode.vue": "^3.6.0",
@@ -35,8 +36,7 @@
     "vue": "^3.3.0",
     "vue-router": "^4.0.13",
     "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2",
-    "multer": "^1.4.5"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
