新增H5预览服务，包含完整的使用指南、项目结构和功能特性；更新package.json以支持H5服务的启动和安装；创建相关的服务器文件和前端页面，支持作品的预览和数据获取。

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test:unit": "vue-cli-service test:unit",
     "test:watch": "vue-cli-service test:unit --watch",
     "lint": "vue-cli-service lint",
-    "mock": "nodemon ./fake-server/mockServer.js"
+    "mock": "nodemon ./fake-server/mockServer.js",
+    "h5": "cd h5-server && npm start",
+    "h5:dev": "cd h5-server && npm run dev",
+    "h5:install": "cd h5-server && node install.js"
   },
   "dependencies": {
     "@ant-design-vue/use": "^0.0.1-alpha.10",
