--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
     "@types/clipboard": "^2.0.1",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.0.1",
@@ -53,6 +54,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
+    "@vue/babel-plugin-jsx": "^1.4.0",
     "@vue/babel-preset-jsx": "^1.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
